app/styles/_core.less
/* ... */
.metrics-compact {
  margin-bottom: 10px;
  white-space : nowrap;
  @media (min-width: @screen-lg-min) {
    margin-bottom: 5px;
  }
  .metrics-sparkline {
    display: none;
    height: 27px;
    border-bottom: 1px solid #ededed;
    @media (min-width: @screen-lg-min) {
      display: inline-block;
      width: 150px;
      vertical-align: -6px;
    }
    @media (min-width: 1400px) {
      width: 240px;
    }
  }
  .metrics-usage {
    display: block;
    margin-left: 10px;
    @media (min-width: @screen-lg-min) {
      display: inline-block;
    }
  }
  .usage-value {
    font-size: 22px;
    font-weight: 300;
    line-height: 1;
    margin: 3px 0;
    .fa {
      .text-muted();
      font-size: 10px;
      vertical-align: 2px;
    }
  }
  .usage-label {
    .small();
    .text-muted();
    // Make sure the labels align with the bottom of the chart.
    line-height: 1;
    margin-bottom: -1px;
  }
  .c3-line {
    stroke-width: 1px;
  }

  @media (max-width: @screen-sm-max) {
    .text-center();
    display: inline-block;
    margin: 10px;
    .metrics-usage {
      .usage-value {
        font-size: 22px;
      }
    }
  }
}

.quota-chart {
  margin: 0 20px;
}


// Create App
// --------------------------------------------------

label.checkbox {
  font-weight: normal;
}

.form-group .checkbox {
  // Use the default form-group margin for consistency. Otherwise the
  // checkboxes are closer than other form elements.
  margin-bottom: inherit;
}

// Make sure icons are the same size so headings align.
.add-to-project {
  .catalog-legend {
    dt, dd {
      display: inline;
    }
    dt:before {
      content: "";
      display: block;
    }
    dd:before {
      // dash and space
      content: '\2014\00a0';
    }
  }

  .filter-group {
    line-height: 1.75;
    margin: 15px 0 10px;
    .search-input, .btn-group {
      display: inline-block;
      margin-bottom: 10px;
      vertical-align: top;
    }
    .search-input {
      width: 100%;
      @media (min-width: @screen-sm-min) {
        width: 400px;
      }
    }
  }
}

.drag-and-drop-zone {
  position: absolute;
  border-width: 3px;
  visibility: hidden;
}

.show-drag-and-drop-zone {
  border-style: dashed;
  visibility: visible;
  border-color:  rgb(136, 136, 136);
  margin-left: -3px;
  background-color: rgba(255, 255, 255, 0.6);
  text-align: center;
  vertical-align: middle;
  p {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    font-size: 24px;
    font-weight: 400;
    margin: 0;
  }
}

.highlight-drag-and-drop-zone {
  border-color: #0099d3;
  p {
    color: #0099d3;
  }
}

.deploy-image {
  h2 small {
    display: block;
    margin-top: 5px;
    @media (min-width:@screen-md-min) {
      display: inline-block;
      margin-top: 0;
    }
  }
  @media (min-height:800px) {
    .empty-state-message {
      margin-top: 100px;
    }
  }
}

.icon-xl {
  font-size: 128px;
}

.istag-separator {
  .hidden-xs();
  .text-muted();
  position: absolute;
  top: 2px;
  right: -3px;
}

.create-route-icon,
.create-storage-icon {
  padding-top: 0;
  text-align: right;
}

.about,
.command-line {
  .about-icon {
    img {
      width: 100%;
    }
  }
}

.osc-form {
  .template-name {
    text-align: right;
    span.fa {
      font-size: 40px;
    }
    @media (min-width: @screen-sm-min) {
      span.fa {
        font-size: 100px;
      }
    }
  }
  span.fa.visible-xs-inline {
    margin-right: 10px;
  }
  .flow {
    .separator;
    display: table;
    margin-top: @grid-gutter-width;
    width: 100%;
    > .flow-block {
      display: inline-block;
      &.right {
        font-size: @font-size-small;
        font-weight: normal;
      }
      .action {
          font-size: @font-size-small;
          font-weight: normal;
          // &:extend(.action-inline);
        }
      > ul.list-inline {
        margin-bottom: 0;
        > li {
          font-size: @font-size-small;
          text-align: left;
        }
      }
    }
  }
  .first-section .flow {
    margin-top: (@grid-gutter-width / 2);
    border-top: 0;
  }
  .template-options {
    line-height: 1.5;
    .list-unstyled {
      .options {
        margin-bottom: 12px;
      }
      .help-block {
        margin: 0 0 5px 2px;
      }
    }
    .form-group {
      width: 100%;
      max-width: 600px;
    }
    .help-block {
      margin-bottom: 5px;
    }
  }
}

@media (max-width: @screen-xs-max) {
  .compute-resource .inline-select {
    // Spacing below input at mobile sizes.
    margin-top: 5px;
  }
}

.next-steps {
  .tile {
    margin-bottom: 0;
    &.tile-status {
      margin-top: 0;
    }
  }
}

.catalog-col section {
  margin-bottom: 20px;
  > h3 {
    margin-top: 0;
    small {
      font-size: @font-size-base;
    }
  }
}
@media (min-width: @screen-md-min) {
  .catalog-col-1 {
    padding-right: 10px;
  }
  .catalog-col-2 {
    padding-left: 10px;
  }
}

.tag {
  color: #999999;
  text-transform: uppercase;
  margin-right: 10px;
}

// `edit-command` directive
.command-args {
  textarea {
    // Resize does not work well with drag and drop reordering.
    resize: none;
  }
  .drag-handle {
    cursor: move;
    .fa {
      padding-left: 5px;
    }
  }
  .drag-handle, .remove-arg {
    background-color: inherit;
    border: 0;
    font-size: 15px;
    padding-top: 5px;
    vertical-align: top;
  }
}

.catalog {
  .tile-template, .tile-image {
    a.tag {
      text-decoration: none;
      &:hover {
        color: black;
        background: #dfdfdf;
        text-decoration: none;
      }
    }
  }
}
/* ... */

